--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -61,6 +61,9 @@
         <variable
             name="obList"
             type="ObservableList&lt;Object&gt;"/>
+        <variable
+            name="isColor"
+            type="Boolean"/>
     </data>
 
     <LinearLayout
@@ -167,9 +170,15 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:text='@{}'
+            app:test='@{"123"}'
             />
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="custom conversions"
+            android:background="@{isColor? @string/blue:@string/gray}"
+            />
     </LinearLayout>
 
 </layout>
