--- a/app/src/main/res/layout/activity_event_bus.xml
+++ b/app/src/main/res/layout/activity_event_bus.xml
@@ -4,14 +4,28 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.m.databindingdemo.ui.activities.EventBusActivity">
+    tools:context="com.m.databindingdemo.ui.activities.EventBusActivity"
+    tools:layout_editor_absoluteY="81dp">
 
 
     <Button
         android:id="@+id/btn_eventbus"
+        android:layout_width="127dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="116dp"
+        android:layout_marginTop="16dp"
+        android:text="Pass Message"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Pass Message"
-        tools:layout_editor_absoluteX="112dp"
-        tools:layout_editor_absoluteY="44dp" />
+        android:layout_marginStart="172dp"
+        android:layout_marginTop="36dp"
+        android:text="init"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_eventbus" />
+
 </android.support.constraint.ConstraintLayout>
